--- a/SleepApneaDiagnoser/SleepApneaDiagnoser/Dialog_Manage_Categories.xaml
+++ b/SleepApneaDiagnoser/SleepApneaDiagnoser/Dialog_Manage_Categories.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="SleepApneaDiagnoser.Dialog_ManageCategories"
+﻿<Window x:Class="SleepApneaDiagnoser.Dialog_Manage_Categories"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -8,19 +8,14 @@
         Title="Manage Signal Categories" Height="240" Width="300" ShowInTaskbar="False" ResizeMode="NoResize">
     <Grid>
 
-        <ListBox x:Name="listBox_Categories" Margin="10,50,0,41.667" HorizontalAlignment="Left" Width="132">
-            <ListBox.ItemTemplate>
-                <DataTemplate>
-                    <TextBox Text="New Signal" Margin="1,1,1,1"/>
-                </DataTemplate>
-            </ListBox.ItemTemplate>
+        <ListBox x:Name="listBox_Categories" Margin="10,50,0,41.667" HorizontalAlignment="Left" Width="132" SelectionChanged="listBox_Categories_SelectionChanged">
         </ListBox>
-        
-        <ListBox x:Name="listBox_Signals" Margin="151,50,0,18.667" HorizontalAlignment="Left" Width="132"/>
+
+        <ListBox x:Name="listBox_Signals" SelectionMode="Multiple" Margin="151,50,0,18.667" HorizontalAlignment="Left" Width="132" SelectionChanged="listBox_Signals_SelectionChanged"/>
         <Label Content="Categories" HorizontalAlignment="Left" Margin="10,19,0,0" VerticalAlignment="Top"/>
         <Label Content="Signals in Category" HorizontalAlignment="Left" Margin="151,18,0,0" VerticalAlignment="Top"/>
         <Button x:Name="button_AddCategory" Content="Add" HorizontalAlignment="Left" Margin="10,0,0,16.667" Width="64" Height="20" VerticalAlignment="Bottom" Click="button_AddCategory_Click"/>
-        <Button x:Name="button_RemoveCategory" Content="Remove" Margin="78,0,0,16.667" VerticalAlignment="Bottom" Height="20" RenderTransformOrigin="1.188,0.643" HorizontalAlignment="Left" Width="64"/>
+        <Button x:Name="button_RemoveCategory" Content="Remove" Margin="78,0,0,16.667" VerticalAlignment="Bottom" Height="20" RenderTransformOrigin="1.188,0.643" HorizontalAlignment="Left" Width="64" Click="button_RemoveCategory_Click"/>
 
     </Grid>
 </Window>
