--- a/SleepApneaDiagnoser/SleepApneaDiagnoser/MainWindow.xaml
+++ b/SleepApneaDiagnoser/SleepApneaDiagnoser/MainWindow.xaml
@@ -37,9 +37,10 @@
                 </Grid>
             </mtr:MetroTabItem>
 
-            <mtr:MetroTabItem Header="Preview" IsEnabled="{Binding IsEDFLoaded}">
+            <mtr:MetroTabItem Header="Preview">
                 <Grid>
 
+                    <!-- Signal Selection -->
                     <Label x:Name="label" Content="Signals" FontSize="18" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="42" Width="71"/>
                     <Label x:Name="label_CurrentCategory" Content="{Binding Path=PreviewCurrentCategoryName}" HorizontalContentAlignment="Center"  HorizontalAlignment="Left" Margin="47,52,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="33" Width="176" FontSize="14"/>
                     <Button x:Name="button_Prev" Content="&lt;" HorizontalAlignment="Left" Margin="10,52,0,0" VerticalAlignment="Top" Width="32" Height="23" IsEnabled="{Binding IsEDFLoaded}" Click="button_Prev_Click"/>
@@ -51,6 +52,7 @@
                     <Button x:Name="button_Categories" Content="Categories" HorizontalAlignment="Left" Margin="138,0,0,84" Width="122" Height="32" VerticalAlignment="Bottom" IsEnabled="{Binding IsEDFLoaded}" Click="button_Categories_Click" FontSize="10"/>
                     <Button x:Name="export_button" Margin="138,0,0,47" Background="LightBlue" Content="Export to Binary" IsEnabled="{Binding IsEDFLoaded}" Click="export_button_Click" HorizontalAlignment="Left" Width="122" Height="32" VerticalAlignment="Bottom"/>
 
+                    <!-- Navigation and Plot -->
                     <Label Content="Plot" FontSize="18" HorizontalAlignment="Left" Margin="265,10,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="42" Width="47"/>
                     <Grid Height="38" Margin="265,52,297.333,0" VerticalAlignment="Top">
                         <Grid.ColumnDefinitions>
@@ -66,7 +68,8 @@
                         <ToggleButton x:Name="toggleButton_UseAbsoluteTime" Content="ABSOLUTE TIME" VerticalAlignment="Top" Height="28" IsChecked="{Binding PreviewUseAbsoluteTime}" IsEnabled="{Binding PreviewNavigationEnabled}" Checked="toggleButton_UseAbsoluteTime_Checked" Unchecked="toggleButton_UseAbsoluteTime_Unchecked" Grid.Column="2" Margin="5.333,0,0,0"/>
                     </Grid>
                     <oxy:PlotView x:Name="PlotView_signalPlot" Margin="265,90,341,10" Model="{Binding PreviewSignalPlot}"/>
-                    
+
+                    <!-- EDF Header -->
                     <Label Content="EDF Header" FontSize="18" Margin="0,10,178.333,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="42" HorizontalAlignment="Right" Width="114"/>
                     <Grid HorizontalAlignment="Right" Width="292" Margin="0,35,0.333,26.667">
                         <Label x:Name="label5" Content="General Information" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="26" Width="136" FontSize="14"/>
@@ -105,9 +108,9 @@
                 </Grid>
             </mtr:MetroTabItem>
 
-            <mtr:MetroTabItem Header="Analysis" IsEnabled="{Binding IsEDFLoaded}">
+            <mtr:MetroTabItem Header="Analysis">
                 <mtr:MetroAnimatedSingleRowTabControl  Margin="10,10,10,10">
-                    <mtr:MetroTabItem Header="Respiratory" IsEnabled="{Binding IsEDFLoaded}" Width="190" Height="40">
+                    <mtr:MetroTabItem Header="Respiratory" Height="40">
                         <Grid>
                             <Grid Height="40" VerticalAlignment="Top" Margin="0,10,10,0">
                                 <Grid.ColumnDefinitions>
@@ -128,22 +131,22 @@
                                 </Grid.ColumnDefinitions>
                                 <Label Content="From Loaded EDF File" FontSize="18" Margin="0,4,20,4"/>
                                 <Label Content="Signal" HorizontalAlignment="Left" Margin="10,6,0,6" RenderTransformOrigin="-5.432,0.857" Width="47" HorizontalContentAlignment="Center" FontSize="14" Grid.Column="1"/>
-                                <ComboBox Margin="62,6,10,6" RenderTransformOrigin="1.025,1.5" Grid.Column="1"/>
+                                <ComboBox Margin="62,6,10,6" RenderTransformOrigin="1.025,1.5" Grid.Column="1" IsEnabled="{Binding IsEDFLoaded}" ItemsSource="{Binding AllNonHiddenSignals}" SelectedValue="{Binding RespiratoryEDFSelectedSignal}"/>
                                 <Label Content="From" HorizontalAlignment="Left" Margin="10,6,0,6" RenderTransformOrigin="-5.432,0.857" Width="47" HorizontalContentAlignment="Center" FontSize="14" Grid.Column="2"/>
-                                <mtr:NumericUpDown Margin="62,6,10,6" TextAlignment="Center" FontSize="14" Grid.Column="2"/>
+                                <mtr:NumericUpDown Margin="62,6,10,6" TextAlignment="Center" FontSize="14" Grid.Column="2" IsEnabled="{Binding IsEDFLoaded}" Value="{Binding RespiratoryEDFStartRecord}"/>
                                 <Label Content="Length" Margin="10,6,0,6" RenderTransformOrigin="-5.432,0.857" HorizontalContentAlignment="Center" FontSize="14" HorizontalAlignment="Left" Width="62" Grid.Column="3"/>
-                                <mtr:NumericUpDown Margin="77,6,10,6"  TextAlignment="Center" FontSize="14" Grid.Column="3"/>
-                                <Button Content="Go" Margin="7,6,0,6" HorizontalAlignment="Left" Width="91" Grid.Column="4"/>
+                                <mtr:NumericUpDown Margin="77,6,10,6"  TextAlignment="Center" FontSize="14" Grid.Column="3" IsEnabled="{Binding IsEDFLoaded}" Value="{Binding RespiratoryEDFDuration}"/>
+                                <Button x:Name="button_PerformRespiratoryAnalysis" Content="Go" Margin="7,6,0,6" HorizontalAlignment="Left" Width="91" Grid.Column="4" IsEnabled="{Binding IsEDFLoaded}" Click="button_PerformRespiratoryAnalysis_Click"/>
                             </Grid>
 
                             <Label Content="Plot" FontSize="18" Height="32" VerticalAlignment="Top" HorizontalAlignment="Left" Width="200" Margin="0,98,0,0"/>
-                            <oxy:PlotView Margin="10,135,350,10"/>
+                            <oxy:PlotView Margin="10,135,350,10" Model="{Binding RespiratorySignalPlot}"/>
 
                             <Label Content="Analysis" FontSize="18" Height="32" VerticalAlignment="Top" HorizontalAlignment="Right" Width="200" Margin="0,98,145,0"/>
                             <Grid HorizontalAlignment="Right" Width="335" Margin="0,135,10,10"/>
                         </Grid>
                     </mtr:MetroTabItem>
-                    <mtr:MetroTabItem Header="Circulatory" IsEnabled="{Binding IsEDFLoaded}" Width="190">
+                    <mtr:MetroTabItem Header="Circulatory" >
                         <Grid>
                             <Grid Height="40" VerticalAlignment="Top" Margin="0,10,10,0">
                                 <Grid.ColumnDefinitions>
@@ -164,12 +167,12 @@
                                 </Grid.ColumnDefinitions>
                                 <Label Content="From Loaded EDF File" FontSize="18" Margin="0,4,20,4"/>
                                 <Label Content="Signal" HorizontalAlignment="Left" Margin="10,6,0,6" RenderTransformOrigin="-5.432,0.857" Width="47" HorizontalContentAlignment="Center" FontSize="14" Grid.Column="1"/>
-                                <ComboBox Margin="62,6,10,6" RenderTransformOrigin="1.025,1.5" Grid.Column="1"/>
+                                <ComboBox Margin="62,6,10,6" RenderTransformOrigin="1.025,1.5" Grid.Column="1" IsEnabled="{Binding IsEDFLoaded}"/>
                                 <Label Content="From" HorizontalAlignment="Left" Margin="10,6,0,6" RenderTransformOrigin="-5.432,0.857" Width="47" HorizontalContentAlignment="Center" FontSize="14" Grid.Column="2"/>
-                                <mtr:NumericUpDown Margin="62,6,10,6" TextAlignment="Center" FontSize="14" Grid.Column="2"/>
+                                <mtr:NumericUpDown Margin="62,6,10,6" TextAlignment="Center" FontSize="14" Grid.Column="2" IsEnabled="{Binding IsEDFLoaded}"/>
                                 <Label Content="Length" Margin="10,6,0,6" RenderTransformOrigin="-5.432,0.857" HorizontalContentAlignment="Center" FontSize="14" HorizontalAlignment="Left" Width="62" Grid.Column="3"/>
-                                <mtr:NumericUpDown Margin="77,6,10,6"  TextAlignment="Center" FontSize="14" Grid.Column="3"/>
-                                <Button Content="Go" Margin="7,6,0,6" HorizontalAlignment="Left" Width="91" Grid.Column="4"/>
+                                <mtr:NumericUpDown Margin="77,6,10,6"  TextAlignment="Center" FontSize="14" Grid.Column="3" IsEnabled="{Binding IsEDFLoaded}"/>
+                                <Button Content="Go" Margin="7,6,0,6" HorizontalAlignment="Left" Width="91" Grid.Column="4" IsEnabled="{Binding IsEDFLoaded}"/>
                             </Grid>
 
                             <Label Content="Plot" FontSize="18" Height="32" VerticalAlignment="Top" HorizontalAlignment="Left" Width="200" Margin="0,98,0,0"/>
@@ -179,7 +182,7 @@
                             <Grid HorizontalAlignment="Right" Width="335" Margin="0,135,10,10"/>
                         </Grid>
                     </mtr:MetroTabItem>
-                    <mtr:MetroTabItem Header="EEG" IsEnabled="{Binding IsEDFLoaded}" Width="190">
+                    <mtr:MetroTabItem Header="EEG">
                         <Grid>
                             <Grid Height="40" VerticalAlignment="Top" Margin="0,10,10,0">
                                 <Grid.ColumnDefinitions>
@@ -200,12 +203,12 @@
                                 </Grid.ColumnDefinitions>
                                 <Label Content="From Loaded EDF File" FontSize="18" Margin="0,4,20,4"/>
                                 <Label Content="Signal" HorizontalAlignment="Left" Margin="10,6,0,6" RenderTransformOrigin="-5.432,0.857" Width="47" HorizontalContentAlignment="Center" FontSize="14" Grid.Column="1"/>
-                                <ComboBox Margin="62,6,10,6" RenderTransformOrigin="1.025,1.5" Grid.Column="1"/>
+                                <ComboBox Margin="62,6,10,6" RenderTransformOrigin="1.025,1.5" Grid.Column="1" IsEnabled="{Binding IsEDFLoaded}"/>
                                 <Label Content="From" HorizontalAlignment="Left" Margin="10,6,0,6" RenderTransformOrigin="-5.432,0.857" Width="47" HorizontalContentAlignment="Center" FontSize="14" Grid.Column="2"/>
-                                <mtr:NumericUpDown Margin="62,6,10,6" TextAlignment="Center" FontSize="14" Grid.Column="2"/>
+                                <mtr:NumericUpDown Margin="62,6,10,6" TextAlignment="Center" FontSize="14" Grid.Column="2" IsEnabled="{Binding IsEDFLoaded}"/>
                                 <Label Content="Length" Margin="10,6,0,6" RenderTransformOrigin="-5.432,0.857" HorizontalContentAlignment="Center" FontSize="14" HorizontalAlignment="Left" Width="62" Grid.Column="3"/>
-                                <mtr:NumericUpDown Margin="77,6,10,6"  TextAlignment="Center" FontSize="14" Grid.Column="3"/>
-                                <Button Content="Go" Margin="7,6,0,6" HorizontalAlignment="Left" Width="91" Grid.Column="4"/>
+                                <mtr:NumericUpDown Margin="77,6,10,6"  TextAlignment="Center" FontSize="14" Grid.Column="3" IsEnabled="{Binding IsEDFLoaded}" />
+                                <Button Content="Go" Margin="7,6,0,6" HorizontalAlignment="Left" Width="91" Grid.Column="4" IsEnabled="{Binding IsEDFLoaded}" />
                             </Grid>
 
                             <Label Content="Plot" FontSize="18" Height="32" VerticalAlignment="Top" HorizontalAlignment="Left" Width="200" Margin="0,98,0,0"/>
