--- a/SleepApneaDiagnoser/SleepApneaDiagnoser/MainWindow.xaml
+++ b/SleepApneaDiagnoser/SleepApneaDiagnoser/MainWindow.xaml
@@ -50,7 +50,7 @@
     </mtr:MetroWindow.Flyouts>
 
     <Grid Margin="0,0,0,0">
-        <mtr:MetroAnimatedSingleRowTabControl Margin="10,10,10,30">
+        <TabControl Margin="10,10,10,30">
 
             <mtr:MetroTabItem Header="Home" Height="40">
                 <Grid>
@@ -140,7 +140,7 @@
             </mtr:MetroTabItem>
 
             <mtr:MetroTabItem Header="Analysis">
-                <mtr:MetroAnimatedSingleRowTabControl  Margin="10,10,10,10">
+                <TabControl  Margin="10,10,10,10">
                     <mtr:MetroTabItem Header="Respiratory" Height="40">
                         <Grid>
                             <Grid Height="40" VerticalAlignment="Top" Margin="0,10,10,0">
@@ -267,10 +267,10 @@
                             <Grid HorizontalAlignment="Right" Width="335" Margin="0,135,10,10"/>
                         </Grid>
                     </mtr:MetroTabItem>
-                </mtr:MetroAnimatedSingleRowTabControl>
+                </TabControl>
             </mtr:MetroTabItem>
             <mtr:MetroTabItem Header="Tools">
-                <mtr:MetroAnimatedSingleRowTabControl Margin="10,10,10,10">
+                <TabControl Margin="10,10,10,10">
                     <mtr:MetroTabItem Header="Coherence">
                         <Grid>
                             <Grid>
@@ -328,8 +328,8 @@
                             </Grid>
                         </Grid>
                     </mtr:MetroTabItem>
-                </mtr:MetroAnimatedSingleRowTabControl>
+                </TabControl>
             </mtr:MetroTabItem>
-        </mtr:MetroAnimatedSingleRowTabControl>
+        </TabControl>
     </Grid>
 </mtr:MetroWindow>
